xx-xx-xx Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Raised status to beta
	* Released version 0.8.0

08-12-12 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected path to table icons
	* Cleaned up MM-relations configuration
	* Updated manual accordingly

08-12-06 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added enforcePid property
	* Added hook for preprocessing uid list before delete

08-12-01 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added hooks for preprocessing records before insert and update
	* Changed logic to call different fetch* method from connector depending on external data type
	* Changed use of reference_uid property in external configuration
	* Caught some unitialized variables

08-11-19 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected behaviour of handleArray() to map field names properly
	* Changed use of external foreign reference field in mapping transformtions and MM-relations

08-11-04 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added several setter and getter methods

08-10-22 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added sample userFunc
	* Updated manual

08-10-21 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added feature for calling userFuncs on every external field

08-09-02 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added API for calling external_import directly with data
	* Modified BE module to separate synchronisable from non-synchronisable tables
	* Updated manual

08-08-10 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Introduced possibility to synchronise a table with multiple external sources
	* Corrected bug in mapping feature
	* Updated manual with instructions for setting up automatic synchronisation and some troubleshooting help

08-08-04 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Updated manual with missing notes about array data format
	* Released version 0.6.2

08-08-03 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added array data format handling