@@ -1,5 +1,8 @@
 # cat=basic//; type=int; label=Storage PID: Enter default page uid for storing imported records
 storagePID = 0
 
+# cat=basic//; type=int; label=Force php time limit (sec): Change the limit maximun execution time for import process. Defaut timelimit is used if value = -1
+timelimit = -1
+
 # cat=basic/enable/; type=boolean; label=Debug: Check to turn on debugging to the Dev Log. Debugging also takes place if TYPO3_DLOG is true. Requires devlog or similar extension.
 debug = 0
